--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -25,8 +25,12 @@
     </header>
 
     <main>
-      <h2>Premium EQ</h2>
-      <p>
+      <section class="app_image">
+        <img alt="Ilustration APP" src="assets/illustration-app.png">        
+      </section>
+      <section class="app_information">
+        <h2>Premium EQ</h2>
+      <p class="text">
         Get expert-level control with a robust equalizer, volume mixer, and
         spatial audio. Take your listening experience to a whole new level and
         access all our incredible features!
@@ -34,7 +38,8 @@
       <p class ="price"><span>$4</span> / month</p>
       <button class="ios_button"><img alt="Apple Logo" src="assets/icon-apple.svg"> iOS Download</button>
       <button class="android_button"><img alt="Android Logo" src="assets/icon-android.svg"> Android Download</button>
-    </main>    
+      </section>      
+    </main>  
 
     <footer>
       <a href="#"><img alt="Equalizer Logo" src="assets/logo.svg"></a>
