--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon-32x32.png"
+      href="starter-code/assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="starter-code/styles.css" />
     <title>Frontend Mentor | Equalizer landing page</title>
   </head>
   <body>
     <header>
-      <a href="#"><img alt="Logo Equalizer" src="assets/logo.svg"></a>
+      <a href="#"><img alt="Logo Equalizer" src="starter-code/assets/logo.svg"></a>
       <h1>We make your music sound extraordinary.</h1>
       <p>
         A system audio equalizer specifically designed for Android and iOS.
@@ -26,7 +26,7 @@
 
     <main>
       <section class="app_image">
-        <img alt="Ilustration APP" src="assets/illustration-app.png">        
+        <img alt="Ilustration APP" src="starter-code/assets/illustration-app.png">        
       </section>
       <section class="app_information">
         <h2>Premium EQ</h2>
@@ -36,21 +36,21 @@
         access all our incredible features!
       </p>
       <p class ="price"><span>$4</span> / month</p>
-      <button class="ios_button"><img alt="Apple Logo" src="assets/icon-apple.svg"> iOS Download</button>
-      <button class="android_button"><img alt="Android Logo" src="assets/icon-android.svg"> Android Download</button>
+      <button class="ios_button"><img alt="Apple Logo" src="starter-code/assets/icon-apple.svg"> iOS Download</button>
+      <button class="android_button"><img alt="Android Logo" src="starter-code/assets/icon-android.svg"> Android Download</button>
       </section>      
     </main>  
 
     <footer>
-      <a href="#"><img alt="Equalizer Logo" src="assets/logo.svg"></a>
+      <a href="#"><img alt="Equalizer Logo" src="starter-code/assets/logo.svg"></a>
       <p>        
         All rights reserved © Equalizer 2021 <br> Have any problems? Contact us via
         social media or email us at <span>equalizer@example.com</span>
       </p>
       <ul>
-        <li><a href="#"><img alt="Facebook Logo" src="assets/icon-facebook.svg"></a></li>
-        <li><a href="#"><img alt="Instagram Logo" src="assets/icon-instagram.svg"></a></li>
-        <li><a href="#"><img alt="Twitter Logo" src="assets/icon-twitter.svg"></a></li>
+        <li><a href="#"><img alt="Facebook Logo" src="starter-code/assets/icon-facebook.svg"></a></li>
+        <li><a href="#"><img alt="Instagram Logo" src="starter-code/assets/icon-instagram.svg"></a></li>
+        <li><a href="#"><img alt="Twitter Logo" src="starter-code/assets/icon-twitter.svg"></a></li>
       </ul>
     </footer>
   </body>
