Change section tag for div tag

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </header>
 
     <main>
-      <section class="app_image">
+      <div class="app_image">
         <img alt="Ilustration APP" src="starter-code/assets/illustration-app.png">        
-      </section>
+      </div>
       <section class="app_information">
         <h2>Premium EQ</h2>
       <p class="text">
